feat: jwt token generating

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=7777
+
+logging.level.root=DEBUG
+logging.level.org.apache.tomcat.util.net.NioEndpoint=ERROR
+logging.level.sun.rmi=ERROR
+logging.level.java.io=ERROR
+logging.level.javax.management=ERROR
+
 spring.application.name=SSOService
+spring.security.oauth2.authorizationserver.issuer-url=http://localhost:7777
+spring.security.oauth2.authorizationserver.introspection-endpoint=/oauth2/token-info
