--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 logging.level.by.bsuir.ssoservice=DEBUG
 logging.level.org.springframework.security=DEBUG
 
+oauth.yandex.client-id=1ed72370bec447119a34c600b213cc55
+oauth.yandex.client-secret=357160e2fd874d7ba916e1ce758d379c
+oauth.yandex.redirect-uri=http://localhost:7777/api/oauth/callback/yandex
+
+oauth.google.client-id=68579956901-fr406vhpaerceupm7ccp10ck8tlpqt2k.apps.googleusercontent.com
+oauth.google.client-secret=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
+oauth.google.redirect-uri=http://localhost:7777/api/oauth/callback/google
+
