--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-./src/main/resources/application.properties
-./src/main/resources/
+src/main/resources/application.properties
 
 
 ### NetBeans ###
